Point System and updates
